# syncular

./: .actrc  .gitattributes  .gitignore  AGENTS.md  AUDIT_FIX_PROGRESS.md  CONSOLE_GATEWAY.md  DEMOS.md  DESIGN-eviction.md  DESIGN-queries.md  DESIGN-relational-server-storage.md  FEEDBACK.md  IMPROVEMENT_PLAN.md  LAUNCH_READINESS.md  LICENSE  README.md  RELEASE.md  RELEASING.md  REVISE.md  ROADMAP.md  SHAD.md  SPEC.md  STATUS.md  SYNCULAR_STREAMLINE.md  TODO.md  UI.md  UI_FEEDBACK.md  biome.json  bunfig.toml  deny.toml  env.ts  knip.json  package.json  railway.toml  tsconfig.build.base.json  tsconfig.json  turbo.json
bindings/tauri/: Cargo.toml  README.md  check.sh
bindings/tauri/bridge-harness/: Cargo.toml
bindings/tauri/bridge-harness/src/: main.rs
bindings/tauri/example/: README.md  build-frontend.ts  package.json  syncular.json  syncular.migrations.lock.json  syncular.queries.ir.json
bindings/tauri/example/queries/: list-todos.syql
bindings/tauri/example/src-tauri/: Cargo.toml
bindings/tauri/plugin/: Cargo.toml  build.rs
bindings/tauri/plugin/permissions/: default.toml
bindings/tauri/plugin/src/: core.rs  lib.rs  transport.rs
rust/: BINARY_SNAPSHOT_CHUNK_FORMAT.md  Cargo.toml  FEATURE_PARITY_PLAN.md  FEATURE_VARIANTS_DECISION.md  LOCAL_PROJECT_INTEGRATION.md  NATIVE_PACKAGING.md  PERFORMANCE_ARCHITECTURE_PLAN.md  QUERY_CLIENT_REWRITE_PLAN.md  RUST_CLIENT_COMPLETION_PLAN.md  SERVER_EDGE_INVESTIGATION.md  STANDOUT_SYNC_PLAN.md
rust/bindings/browser/: README.md  package.json
rust/bindings/browser/scripts/: build-syncular-v2-wasm.ts  generate-bridge.ts  generate-wasm-bindings.ts  size-syncular-v2-wasm.ts
rust/bindings/browser/src/: auth-leases.ts  blob-limits.ts  bridge-client.test.ts  bridge-client.ts  client-config.test.ts  client.test.ts  client.ts  command-history.ts  database.test.ts  database.ts  diagnostics.ts  errors.test.ts  errors.ts  generated-app-conformance.test.ts  generated-bridge.ts  generated-runtime.test.ts  generated-wasm-bindings.d.ts  index.ts  mutations.ts  public-api.test.ts  react.test.ts  react.ts  runtime-contract.ts  rust-client.ts  rust-store.ts  types.ts  wasm-runtime.ts  worker-client.test.ts  worker-client.ts  worker-entry.ts  worker-protocol.ts  worker-realtime.test.ts  worker-realtime.ts
rust/bindings/c/: syncular_native.h
rust/bindings/crdt-adapters/: README.md  package.json  tsconfig.json
rust/bindings/crdt-adapters/src/: index.ts  webview-host-facade.test.ts  webview-host-facade.ts  yjs-document-field-adapter.test.ts  yjs-document-field-adapter.ts  yjs-prosemirror-bridge.test.ts  yjs-prosemirror-bridge.ts
rust/bindings/java/jni/: jni_glue.c  syncular-runtime.h  syncular_runtime.h
rust/bindings/javascript/: CHANGELOG.md  README.md  package.json  tsconfig.json
rust/bindings/javascript/scripts/: build-syncular-v2-wasm.ts  build-syncular-wasm.ts  generate-wasm-bindings.ts  size-syncular-wasm.ts  write-syncular-v2-wasm-catalog.ts  write-syncular-wasm-catalog.ts
rust/bindings/javascript/src/: generated-wasm-bindings.d.ts  index.ts  runtime-contract.ts
rust/bindings/swift/: Package.swift
rust/crates/bench/: Cargo.toml
rust/crates/client/: Cargo.toml  README.md
rust/crates/codegen/: Cargo.toml  README.md
rust/crates/command/: Cargo.toml
rust/crates/conformance-shim/: Cargo.toml
rust/crates/ffi/: Cargo.toml  README.md
rust/crates/protocol/: Cargo.toml  README.md
rust/crates/runtime/: Cargo.toml  README.md  boltffi.toml  syncular.codegen.json  syncular.schema.json
rust/crates/ssp2/: Cargo.toml
rust/crates/syncular/: Cargo.toml  README.md
rust/crates/testkit/: Cargo.toml  README.md
rust/docs/: BENCHMARK_LOG.md  CLIENT_PRODUCT_CONTRACT.md  COMPATIBILITY_REGISTER.md  QUALITY_GATES.md  README.md  ROADMAP.md
rust/docs/reference/: BINARY_SNAPSHOT_CHUNK_FORMAT.md  BLANK_APP_API_REVIEW.md  BROWSER_WASM_SIZE_ANALYSIS.md  FEATURE_VARIANTS_DECISION.md  GENERATED_CLIENT_API.md  LOCAL_PROJECT_INTEGRATION.md  NATIVE_PACKAGING.md  OFFLINE_AUTH_LEASE_MODEL.md  PERFORMANCE_ARCHITECTURE_PLAN.md  RUNTIME_LIMITS.md  RUST_CLIENT_COMPLETION_PLAN.md  SECURITY_PRIVACY_THREAT_MODEL.md  SERVER_EDGE_INVESTIGATION.md  STANDOUT_SYNC_PLAN.md
rust/docs/work-packages/: README.md  WP-01-protocol-integrity.md  WP-02-protocol-kernel.md  WP-03-binary-apply-performance.md  WP-04-realtime-runtime.md  WP-05-adaptive-bootstrap.md  WP-06-local-read-models.md  WP-07-crdt-fields.md  WP-08-testkit-conformance.md  WP-09-native-bindings-packaging.md  WP-10-browser-package-docs.md  WP-11-server-edge-offline-auth.md  WP-12-scoped-snapshot-artifacts.md  WP-13-observability-debuggability.md  WP-14-developer-experience-generated-apis.md  WP-15-error-taxonomy-recovery-semantics.md  WP-16-schema-evolution-migration-safety.md  WP-17-offline-lifecycle-app-state.md  WP-18-production-hardening-limits.md  WP-19-security-privacy-review.md  WP-20-local-data-hygiene-repair.md  WP-21-query-observation-live-query-precision.md  WP-22-undo-redo-mutation-history.md  WP-23-time-travel-audit-inspection.md  WP-24-blob-hardening-production-polish.md  WP-25-file-asset-sync.md  WP-26-typescript-host-bindings-platform-bridges.md  WP-27-rust-relay-protocol-boundary.md  WP-28-relay-production-protocol-validation.md  WP-29-rust-client-console-workbench.md  WP-29-rust-edge-proxy.md  WP-30-foundation-cleanup-complexity.md  WP-30-rust-realtime-fanout.md  WP-31-rust-client-benchmark-parity-performance.md  WP-31-rust-server-trait-model.md  WP-32-realtime-recovery-fanout-external-notifications.md  WP-33-unified-app-contract-and-runtime-extensions.md  WP-34-rust-first-docs-information-architecture.md  WP-35-rust-first-public-docs-api-cleanup.md  WP-36-binding-example-clarity.md  (+14 more)
rust/examples/crdt-adapters/: README.md  yjs-document-field-adapter.test.ts  yjs-document-field-adapter.ts
rust/examples/todo-app/: Cargo.toml  README.md  package.json  server-handlers.test.ts  server-handlers.ts  syncular.app.test.ts  syncular.app.ts  syncular.codegen.json  syncular.codegen.ts  syncular.schema.json
rust/scripts/: package-native-bindings.sh  run-conformance-gates.sh
(+1589 files in other folders)
