# A SEPARATE cargo workspace from rust — deliberately. Tauri's crate tree is
# heavy; joining the main workspace would bloat every `cargo test`/`clippy`
# gate run over there. This workspace holds the plugin and its example app, with
# its own check script (check.sh) and its own CI job (v2.yml: tauri-bindings).
# Path deps into ../../rust/crates work fine across the workspace boundary.
[workspace]
resolver = "2"
members = [
  "plugin",
  "example/src-tauri",
]

[workspace.package]
edition = "2021"
license = "UNLICENSED"
publish = false
