[package]
name = "syncular-client"
version = "0.1.0"
edition = "2021"
description = "Developer-facing Rust SDK for Syncular SQLite-backed offline sync clients."
license = "Apache-2.0"
repository = "https://github.com/syncular/syncular"
homepage = "https://syncular.dev"
readme = "README.md"
keywords = ["syncular", "sqlite", "offline", "sync"]
categories = ["database"]
default-run = "syncular-client"

[[bin]]
name = "syncular-client"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "syncular-rust-perf"
path = "src/perf.rs"
required-features = ["cli"]

[features]
default = ["native", "crdt-yjs", "e2ee"]
boltffi-bindings = ["syncular-runtime/boltffi-bindings"]
cli = [
    "dep:clap",
    "dep:syncular-testkit",
    "dep:tungstenite",
    "demo-todo-native-fixture",
]
crdt-yjs = ["syncular-runtime/crdt-yjs"]
demo-todo-fixture = ["syncular-runtime/demo-todo-fixture"]
demo-todo-native-fixture = ["native", "syncular-runtime/demo-todo-native-fixture"]
e2ee = ["syncular-runtime/e2ee"]
native = ["syncular-runtime/native"]
web-blobs = ["syncular-runtime/web-blobs"]
web-transport = ["syncular-runtime/web-transport"]
web-client = ["syncular-runtime/web-client"]
web-owned-sqlite = ["syncular-runtime/web-owned-sqlite"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syncular-runtime = { version = "0.1.0", path = "../runtime", default-features = false }
syncular-testkit = { version = "0.1.0", path = "../testkit", optional = true }
tungstenite = { version = "0.26", default-features = false, features = [
    "handshake",
], optional = true }
