[package]
name = "syncular-codegen"
version = "0.1.0"
edition = "2021"
description = "Schema introspection and Rust code generator for Syncular app clients."
license = "Apache-2.0"
repository = "https://github.com/syncular/syncular"
homepage = "https://syncular.dev"
readme = "README.md"
keywords = ["syncular", "codegen", "sqlite", "diesel"]
categories = ["development-tools"]

[[bin]]
name = "syncular-codegen"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
diesel = { version = "2.2", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
