[package]
name = "syncular-command"
version = "0.1.0"
edition = "2021"
description = "Shared JSON command router over the Syncular v2 Rust client core — one command surface consumed by both the conformance shim and the FFI native core"
license = "UNLICENSED"
publish = false

[dependencies]
ssp2 = { path = "../ssp2" }
syncular-client = { path = "../client" }
serde_json = "1"

[features]
default = []
# §5.10.5 native CRDT commands (crdtText/crdtInsertText/crdtDeleteText/
# crdtApplyUpdate) — forwarded to the client core's crdt-yjs helpers. Off by
# default so lean builds (and the codec-only paths) skip yrs entirely.
crdt-yjs = ["syncular-client/crdt-yjs"]
# §5.11 client-side encryption — forwarded to the client core. Off by default
# so lean builds skip the crypto crates; the conformance shim enables it.
e2ee = ["syncular-client/e2ee"]
