[package]
name = "conformance-shim"
version = "0.1.0"
edition = "2021"
description = "Conformance ClientDriver shim: JSON-lines over stdio around the Rust client core (and the ssp2 codec)"
license = "UNLICENSED"
publish = false

[[bin]]
name = "conformance-shim"
path = "src/main.rs"

[dependencies]
syncular-client = { path = "../client" }
syncular-command = { path = "../command" }
serde_json = "1"
