[package]
name = "conformance-shim"
version = "0.1.0"
edition = "2021"
description = "Conformance ClientDriver shim: JSON-lines over stdio around the Rust client core (and the ssp2 codec)"
license = "UNLICENSED"
publish = false

[[bin]]
name = "conformance-shim"
path = "src/main.rs"

[dependencies]
syncular-client = { path = "../client" }
# §5.10.5: the shim carries the crdt-yjs commands so the cross-core conformance
# pairing (Appendix B.14) can have the RUST side AUTHOR crdt edits via
# crdtInsertText/crdtDeleteText and the TS/yjs side read them back — byte-
# identical convergence both directions. The shim is a proof binary (never
# shipped), so the feature is on unconditionally: no special build flag for the
# pairing, and the lean lane is still proven on the crate builds themselves.
# §5.11: e2ee is on too so the cross-core encryption conformance scenarios
# exercise the Rust encrypt/decrypt seam against the TS core.
syncular-command = { path = "../command", features = ["crdt-yjs", "e2ee"] }
serde_json = "1"
