[package]
name = "syncular-ffi"
version = "0.0.0"
edition = "2021"
description = "Syncular v2 Rust client core packaged as a C-ABI native library — the shipping native runtime for iOS/Android/JVM/desktop over the shared command surface"
license = "Apache-2.0"
repository = "https://github.com/syncular/syncular"

[lib]
name = "syncular"
# cdylib: the shared object apps dlopen/link at runtime (.dylib/.so/.dll).
# staticlib: the archive for static linking (iOS xcframework, embed in a host).
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
syncular-client = { path = "../client", version = "0.0.0" }
syncular-command = { path = "../command", version = "0.0.0" }
serde_json = "1"

# The §8.7 round-over-socket tests spin a scripted in-test WS server
# (tungstenite accept loop) and build responses with the ssp2 codec — the
# loopback doctrine in Rust. The test module is cfg-gated on native-transport;
# dev-deps are not feature-gated so they stay available for the build graph.
[dev-dependencies]
ssp2 = { package = "syncular-ssp2", path = "../ssp2" }
tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

[features]
default = []
native-transport = ["syncular-client/native-transport"]
# §5.10.5 native CRDT commands. Off by default (lean-core builds skip yrs);
# examples/demos that show collaborative text turn it on. Forwards to the
# shared router's crdt-yjs feature — the FFI adds no code, the commands ride
# the existing `dispatch` call.
crdt-yjs = ["syncular-command/crdt-yjs"]
# §5.11 client-side encryption. Off by default (lean builds skip the crypto
# crates); a host that syncs encrypted columns turns it on. Forwards to the
# shared router's e2ee feature — the FFI adds no code.
e2ee = ["syncular-command/e2ee"]
