[package]
name = "syncular-protocol"
version = "0.1.3"
edition = "2021"
description = "Wire protocol and integrity types for Rust-first Syncular clients."
license = "Apache-2.0"
repository = "https://github.com/syncular/syncular"
homepage = "https://syncular.dev"
readme = "README.md"
keywords = ["syncular", "sync", "offline", "protocol"]
categories = ["data-structures", "encoding"]

[dependencies]
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
