[package]
name = "syncular-runtime"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[features]
default = ["native", "boltffi-bindings", "crdt-yjs"]
boltffi-bindings = ["native", "dep:boltffi"]
crdt-yjs = []
native = [
    "dep:diesel",
    "dep:flate2",
    "dep:libsqlite3-sys",
    "dep:reqwest",
    "dep:rusqlite",
    "dep:tungstenite",
]
web-transport = [
    "dep:flate2",
    "dep:js-sys",
    "dep:serde-wasm-bindgen",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
]
web-client = ["web-transport"]
web-store = ["web-client"]
web-owned-sqlite = [
    "web-client",
    "crdt-yjs",
    "dep:sqlite-wasm-rs",
    "dep:sqlite-wasm-vfs",
]

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
base64 = "0.22"
bip39 = { version = "2.1", default-features = false, features = ["std"] }
boltffi = { version = "0.24.1", optional = true }
chacha20poly1305 = { version = "0.10", features = ["std"] }
diesel = { version = "2.2", features = ["sqlite", "returning_clauses_for_sqlite_3_35"], optional = true }
flate2 = { version = "1.0", optional = true }
getrandom = "0.2"
hex = "0.4"
hkdf = "0.12"
js-sys = { version = "0.3", optional = true }
libsqlite3-sys = { version = "0.37", features = ["bundled"], optional = true }
pbkdf2 = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }
rusqlite = { version = "0.39", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = { version = "0.6", optional = true }
serde_json = "1.0"
sha2 = "0.10"
sqlite-wasm-rs = { version = "0.5", optional = true }
sqlite-wasm-vfs = { version = "0.2", optional = true }
tungstenite = { version = "0.26", default-features = false, features = ["rustls-tls-webpki-roots", "handshake"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = [
    "AbortSignal",
    "BinaryType",
    "Headers",
    "MessageEvent",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Url",
    "UrlSearchParams",
    "WebSocket",
    "Window",
    "console",
], optional = true }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
yrs = "0.26"
zeroize = "1.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uuid = { version = "1.11", features = ["v4"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1.11", features = ["v4", "js"] }
