[package]
name = "syncular-testkit"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde_json = "1.0"
syncular-runtime = { path = "../runtime", default-features = false, features = [
    "native",
    "demo-todo-native-fixture",
    "crdt-yjs",
] }
uuid = { version = "1.11", features = ["v4"] }
