[package]
name = "syncular-testkit"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syncular-runtime = { path = "../runtime", default-features = false, features = [
    "native",
    "demo-todo-native-fixture",
    "crdt-yjs",
] }
tungstenite = { version = "0.26", default-features = false, features = [
    "handshake",
] }
uuid = { version = "1.11", features = ["v4"] }
