[package]
name = "syncular-todo-app-example"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
doctest = false

[dependencies]
diesel = { version = "2.2", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syncular-client = { path = "../../crates/client", default-features = false, features = ["native", "crdt-yjs", "e2ee"] }
