[package]
name = "syncular-client"
version = "0.1.0"
edition = "2021"
description = "Syncular v2 Rust client core on rusqlite, implemented from v2/SPEC.md alone (language-neutrality POC, stage 2)"
license = "UNLICENSED"
publish = false

[dependencies]
ssp2 = { path = "../ssp2" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
